--- a/config/ui/freetz.in
+++ b/config/ui/freetz.in
@@ -206,7 +206,7 @@ menu "Web Interface"
 
 endmenu # "Webif customization" #
 
-menu "Additional informations"
+menu "Additional information"
 	visible if FREETZ_SHOW_EXPERT
 
 	config FREETZ_ADD_JUIS_CHECK
@@ -257,7 +257,7 @@ menu "Additional informations"
 			DSL driver information, etc.
 
 			If you do not have enough space in your image, you can remove BOX-Info
-			from your image. But usualy it is not necessary: The size of BOX-Info cgi
+			from your image. But usually it is not necessary: The size of BOX-Info cgi
 			is very small (2-3 kByte).
 
 	# TODO: invert logic
@@ -270,7 +270,7 @@ menu "Additional informations"
 			if it is included into image (s. "Remove .config from Image").
 
 			If you do not have enough space in your image, you can remove FREETZ-Info
-			from your image. But usualy it is not necessary: The size of FREETZ-Info
+			from your image. But usually it is not necessary: The size of FREETZ-Info
 			is very small (2-3 kByte).
 
 	config FREETZ_USER_DEFINED_COMMENT
@@ -427,5 +427,5 @@ menu "Additional informations"
 
 	endchoice # "Include .config file in image"
 
-endmenu # "Additional informations" #
+endmenu # "Additional information" #
 
